# python_bzlmod

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  main.py  test_lib.py
custom_rules/: custom_pyinfo.bzl  wrapped_py.bzl
docs/: module_diagram.plantuml
module_1/: .bazelrc  MODULE.bazel  README.md
module_1/python/: BUILD.bazel  main.py  test_lib.py
module_1/python/requirements/: requirements.in  requirements_lock_3_11.txt  requirements_lock_3_12.txt
module_2/: MODULE.bazel
module_2/python_2/: BUILD.bazel  main.py  module_2_test_lib.py
module_2/python_2/requirements/: requirements.in  requirements_lock_3_11.txt  requirements_lock_3_12.txt
module_root/: BUILD.bazel  MODULE.bazel  README.md  main.py  test_lib.py
module_root/requirements/: requirements.in  requirements_lock_3_11.txt  requirements_lock_3_12.txt
requirements/: BUILD.bazel  requirements.in
