module(
    name = "module_1",
    version = "0.0",
)

bazel_dep(name = "rules_python", version = "0.35.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(
    python,
    python = "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "module_1_pypi",
    python_version = "3.11",
    requirements_lock = "//python/requirements:requirements_lock_3_11.txt",
)

pip.parse(
    hub_name = "module_1_pypi",
    python_version = "3.12",
    requirements_lock = "//python/requirements:requirements_lock_3_12.txt",
)

use_repo(pip, "module_1_pypi")