module(
    name = "module_root",
    version = "0.0",
)

bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name="module_1", version="0.0.0")
local_path_override(
    module_name = "module_1",
    path = "../module_1",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(
    python,
    python = "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    use_hub_alias_dependencies = True,
    requirements_lock = "//requirements:requirements_lock_3_11.txt",
)

pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    use_hub_alias_dependencies = True,
    requirements_lock = "//requirements:requirements_lock_3_12.txt",
)

use_repo(pip, "pypi")